--- a/app/src/main/res/layout/user_item_view.xml
+++ b/app/src/main/res/layout/user_item_view.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
@@ -74,6 +75,7 @@
                     android:textSize="10dp"
                     android:textStyle="normal"
                     android:paddingTop="2dp"
+                    android:visibility="gone"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_gravity="center_vertical"/>
@@ -93,11 +95,12 @@
         android:textColor="@color/colorPostDarkText"
         android:textSize="10dp"
         android:textStyle="normal"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:paddingLeft="10dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="2dp"
         android:paddingBottom="5dp"/>
 
     <Button
@@ -106,11 +109,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="0dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginBottom="10dp"
         android:text="@string/book"
+        android:visibility="gone"
         android:textColor="@color/colorWhite" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
