--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -383,6 +383,21 @@
                         android:text="@string/delete"
                         android:textColor="@color/colorWhite"
                         android:visibility="gone"/>
+
+                    <Button
+                        android:id="@+id/btn_review"
+                        style="@style/ThemeSmallButtonStyle"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="0dp"
+                        android:layout_marginRight="0dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="@string/reviews"
+                        android:textColor="@color/colorWhite"
+                        android:visibility="gone"/>
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
