--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/col_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -132,25 +131,50 @@
             android:layout_marginBottom="30dp"
             android:visibility="gone"
             android:theme="@android:style/Widget.ProgressBar.Small.Inverse"
-            app:layout_constraintEnd_toStartOf="@+id/e_guideline"
-            app:layout_constraintStart_toStartOf="@+id/s_guideline"
-            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/bottomBar"/>
 
-
-        <TextView
+        <LinearLayout
             android:id="@+id/empty_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/empty_booking"
-            android:textColor="@color/colorPostText"
-            android:textSize="12dp"
-            android:textStyle="bold"
+            android:orientation="vertical"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/e_guideline"
             app:layout_constraintStart_toStartOf="@+id/s_guideline"
             app:layout_constraintTop_toBottomOf="@id/guideline"
-            app:layout_constraintBottom_toTopOf="@+id/bottomBar"/>
+            app:layout_constraintBottom_toTopOf="@+id/bottomBar">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/empty_booking"
+                android:textColor="@color/colorPostText"
+                android:textSize="18sp"
+                android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/btn_book_now"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/btn_red"
+                android:text="@string/book_now"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="10dp"
+                android:paddingStart="10dp"
+                android:paddingRight="10dp"
+                android:paddingEnd="10dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:textColor="@color/colorWhite"
+                android:textSize="14sp"
+                android:textStyle="normal" />
+
+        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/bottomBar"
