--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -186,21 +186,44 @@
 
                     </LinearLayout>
 
-                    <Button
-                        android:id="@+id/editButton"
-                        style="@style/ThemeSmallButtonStyle"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginLeft="0dp"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:layout_marginEnd="0dp"
-                        android:layout_marginRight="0dp"
-                        android:paddingStart="0dp"
-                        android:paddingLeft="0dp"
-                        android:paddingEnd="0dp"
-                        android:paddingRight="0dp"
-                        android:text="@string/edit"
-                        android:textColor="@color/colorWhite" />
+                        android:orientation="horizontal"
+                        android:layout_gravity="center_horizontal">
+
+                        <Button
+                            android:id="@+id/editButton"
+                            style="@style/ThemeSmallButtonStyle"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="0dp"
+                            android:layout_marginLeft="0dp"
+                            android:layout_marginEnd="0dp"
+                            android:layout_marginRight="0dp"
+                            android:paddingStart="0dp"
+                            android:paddingLeft="0dp"
+                            android:paddingEnd="0dp"
+                            android:paddingRight="0dp"
+                            android:text="@string/edit"
+                            android:textColor="@color/colorWhite" />
+
+                        <Button
+                            android:id="@+id/changePassButton"
+                            style="@style/ThemeSmallButtonStyle"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginEnd="0dp"
+                            android:layout_marginRight="0dp"
+                            android:paddingStart="5dp"
+                            android:paddingLeft="5dp"
+                            android:paddingEnd="5dp"
+                            android:paddingRight="5dp"
+                            android:text="@string/change_password"
+                            android:textColor="@color/colorWhite" />
+                    </LinearLayout>
+
 
                     <View
                         android:layout_width="match_parent"
