--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -65,11 +65,20 @@
                         android:layout_height="wrap_content"
                         android:gravity="left"
                         android:spinnerMode="dropdown"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
+                        android:layout_centerInParent="true"
+
+                        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/logout"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
-                        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        app:srcCompat="@drawable/ic_logout"/>
+
                 </RelativeLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
