--- a/app/src/main/res/layout/add_review_dialog.xml
+++ b/app/src/main/res/layout/add_review_dialog.xml
@@ -30,8 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:importantForAutofill="no"
-            android:inputType="textNoSuggestions|textCapSentences"
-            android:maxLines="1"
+            android:inputType="textNoSuggestions|textCapSentences|textMultiLine"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
